Bug 44948 - [bisected] GLES2 conformance test stencil8 broken on non-HiZ DDX
Summary: [bisected] GLES2 conformance test stencil8 broken on non-HiZ DDX
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: All All
: medium critical
Assignee: Chad Versace
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-19 10:09 UTC by Ian Romanick
Modified: 2012-01-20 11:49 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Ian Romanick 2012-01-19 10:09:20 UTC
My favorite assertion failure is back:

brw_misc_state.c:372: emit_depthbuffer: Assertion `!separate_stencil || hiz_region' failed.

In a full piglit run, this only occurs in the GLES2 conformance test stencil8.

Bisected to:

commit 2f868f1ddd636bc8d4cbcd5beeef1246cec80c65
Author: Eric Anholt <eric@anholt.net>
Date:   Thu Nov 17 17:11:00 2011 -0800

    i965: Add support for Z16 depth formats.
    
    v2: Don't flag the format as being HiZ ready (there's DRI2 handshake
        pain to go through).
    
    Fixes piglit gl-3.0-required-sized-texture-formats
    
    NOTE: This is a candidate for the 8.0 branch.
    
    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>
    Reviewed-by: Chad Versace <chad.versace@linux.intel.com>
Comment 1 Chad Versace 2012-01-19 13:10:20 UTC
Assigning to self.

I have a fix for this. Will post after lunch.
Comment 2 Chad Versace 2012-01-20 11:49:30 UTC
Mark RESOLVED/FIXED.

Fixed by:

commit ba5252e590782a77b8a46d9c0ec4691cf8da6298
Author: Chad Versace <chad.versace@linux.intel.com>
Date:   Thu Jan 19 13:08:48 2012 -0800

    intel/gen6: Some framebuffers having separate depthstencil should be unsupported


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.